--- a/programa/CemIdeiasPics/Properties/Resources.resx
+++ b/programa/CemIdeiasPics/Properties/Resources.resx
@@ -118,22 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="CemIdeiasPics-Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CemIdeiasPics-Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cemideiaspicks" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cemideiaspicks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Clientes-Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Clientes-Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cemideiaspicks" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cemideiaspicks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Portifolio-Icone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Portifolio-Icone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Configs-Icone" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Configs-Icone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Camera-Icone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Camera-Icone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Configs-Icone" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Configs-Icone.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CemIdeiasPics-Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CemIdeiasPics-Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="default" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\default.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
