--- a/programa/CemIdeiasPics/Properties/Resources.resx
+++ b/programa/CemIdeiasPics/Properties/Resources.resx
@@ -142,4 +142,7 @@
   <data name="none" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\none.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="exit_icon2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit-icon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
